[STEP 2] DDL QueryBuilder PR 리뷰 요청드립니다. (#60)
* refac : week1-step1 피드백 반영

- 모든 테스트 코드에서 사용되는 Car Class 변수를 상위 스코프에 선언해서 사용하도록 수정했습니다.
- try~catch에 대한 부분을 공통화하여 재사용했습니다.(forEach의 Lambda에서 던지는 Exception은 메서드 선언부에서 던지도록 처리해도 try-catch 로직이 필요하여 분리했습니다.)

* feat : DDL 쿼리 생성

* test : DDL 쿼리 생성 테스트

* fix : Java 17 > 11 문법으로 변경

* refac : 피드백 반영

* feat : EntityMappingMeta 클래스를 통해 추상화

* test : Meta 클래스 테스트 추가